--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,11 @@ django = "^5.1.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.10.0"
+isort = "^5.13.2"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
