--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,32 @@ django = "^5.1.3"
 [tool.poetry.group.dev.dependencies]
 black = "^24.10.0"
 isort = "^5.13.2"
+mypy = "^1.13.0"
+django-stubs = "^5.1.1"
+coverage = "^7.6.4"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.black]
+line-length = 120
+
 [tool.isort]
 profile = "black"
+
+[tool.mypy]
+plugin = ["mypy_django_plugin.main"]
+python_vesion = 3.12
+strict = true
+
+[[tool.mypy.overrides]]
+module = "*.migrations.*"
+ignore_errors = true
+
+[[tool.mypy.overrides]]
+module = "manage"
+ignore_errors = true
+
+[tool.django-stubs]
+django_settings_module = "oz_django.settings"
