--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,8 @@ jobs:
       DB_HOST: 127.0.0.1
       DB_PORT: 3306
       DB_USER: root
-      DB_PASSWORD: 1234
-      DB_DATABASE: oz_django
+      DB_PASSWORD: 4463
+      DB_DATABASE: oz_django6
 
     steps:
       - name: Check out the codes
