--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,8 +31,8 @@ line-length = 120
 profile = "black"
 
 [tool.mypy]
-plugin = ["mypy_django_plugin.main"]
-python_vesion = 3.12
+plugins = ["mypy_django_plugin.main"]
+python_version = 3.12
 strict = true
 
 [[tool.mypy.overrides]]
