--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 django = "^5.1.3"
 pymysql = "^1.1.1"
 cryptography = "^43.0.3"
+django-ninja = "^1.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
